--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -207,6 +207,7 @@
   "tooltip.jolcraft.strongbox.loot": "This strongbox has loot inside.",
   "tooltip.jolcraft.strongbox.set_locked": "You have locked this strongbox.",
   "tooltip.jolcraft.strongbox.locked": "This strongbox is locked.",
+  "tooltip.jolcraft.strongbox.busy": "Someone else is trying to pick this lock.",
 
   "tooltip.jolcraft.bounty.locked": "Bounty info locked",
   "tooltip.jolcraft.bounty.invalid": "Bounty Tier: Invalid",
