--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "item.jolcraft.dev_key": "Dev Key",
   "item.jolcraft.gold_coin": "Gold Coin",
   "item.jolcraft.dwarven_lexicon": "Dwarven Lexicon",
   "item.jolcraft.strongbox": "Strongbox",
