Scalable legendary tomes

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -382,111 +382,7 @@
 
   "entity.jolcraft.muffhorn": "Muffhorn",
 
-  "filled_map.forge": "Map to a Dwarven Forge",
+  "filled_map.forge": "Map to a Dwarven Forge"
 
-  "lore.jolcraft.tunnel_stability": "A Survey of Tunnel Stability in Soft Granite, Volume II",
-  "lore.jolcraft.ancient.keystone_shapes": "On the Shapes and Placement of Keystones, Age of Foundations",
-
-  "lore.jolcraft.barrel_sealing": "Proper Barrel Sealing Techniques, Volume I",
-  "lore.jolcraft.ancient.cistern_seals": "Inspections of Cistern Seals, Year 132",
-
-  "lore.jolcraft.turnip_yields": "A Record of Turnip Yields, Year 538",
-  "lore.jolcraft.ancient.brew_yields": "Brew Yields and Yeast Logs, Year 91",
-
-  "lore.jolcraft.beard_grooming": "The Art of Beard Grooming: A Beginner's Guide, 4th Edition",
-  "lore.jolcraft.ancient.beard_oils": "Beard Oil Recipes for the Elder Kin, Volume III",
-
-  "lore.jolcraft.minecart_wheels": "Catalog of Minecart Wheel Failures, Volume VII",
-  "lore.jolcraft.ancient.pipe_assembly": "Pipe Assembly Diagrams of the Early Guild, Volume I",
-
-  "lore.jolcraft.furnace_temperatures": "Furnace Temperatures and You, Revised 987",
-  "lore.jolcraft.ancient.anvil_wear": "Patterns of Anvil Wear and Maintenance, First Forgemasters",
-
-  "lore.jolcraft.pipeworks_karram_dun": "The Pipeworks of Lower Karram-Dûn, Year 1112",
-  "lore.jolcraft.ancient.dowsing_methods": "Practical Dowsing Methods for Water and Ore, Second Era",
-
-  "lore.jolcraft.forge_etiquette": "Basic Forge Etiquette for Apprentices, Volume IV",
-  "lore.jolcraft.ancient.hall_greetings": "Proper Greetings in the Great Halls, Year 59",
-
-  "lore.jolcraft.ledgers": "Ledgers and Ledgers: On the Keeping of Ledgers, Volume IX",
-  "lore.jolcraft.ancient.ledger_formats": "Accepted Formats for Stone Ledger Tablets, Early Record-Keepers",
-
-  "lore.jolcraft.fungus_upper_caverns": "Common Fungus of the Upper Caverns, Survey of 1014",
-  "lore.jolcraft.ancient.fungal_colony_notes": "Notes on the Great Fungal Colony Collapse, Age of Growth",
-
-  "lore.jolcraft.echo_patterns": "Observations on Echo Patterns in Vaulted Halls, Volume II",
-  "lore.jolcraft.ancient.seating_chart": "Seating Charts for Guild Banquets, Old Calendar",
-
-  "lore.jolcraft.chiseled_deepslate": "Properties of Chiseled Deepslate, Volume VI",
-  "lore.jolcraft.ancient.spare_keys": "The Making and Keeping of Spare Keys, Generation I",
-
-  "lore.jolcraft.forge_marks": "Ancestral Forge Marks and Their Variants, Volume III",
-  "lore.jolcraft.ancient.rune_accounting": "Rune-Tallies for Trade Accounting, Year 287",
-
-  "lore.jolcraft.aqueduct_collapse": "Survey of the Northern Aqueduct Collapse, Year 1198",
-  "lore.jolcraft.ancient.cistern_cleaning": "Cistern Cleaning Practices, Generation IV",
-
-  "lore.jolcraft.gem_vein_lunar_cycle": "Gem Vein Activity by Lunar Cycle, Volume VIII",
-  "lore.jolcraft.ancient.starstone_rumors": "Rumors of Starstones Falling, Night of Terrors",
-
-  "lore.jolcraft.mold_id_containment": "Subterranean Mold: Identification & Containment, Year 1243",
-  "lore.jolcraft.ancient.dust_control": "Sweeping Schedules for Dust Control, Early Quarters",
-
-  "lore.jolcraft.whispers_old_pillars": "Whispers Among the Old Pillars, Volume V",
-  "lore.jolcraft.ancient.lantern_maintenance": "Daily Maintenance of Oil Lanterns, Year 60",
-
-  "lore.jolcraft.queen_hraga": "A Disputed Account of Forge-Queen Hraga's Reign, Volume I",
-  "lore.jolcraft.ancient.champion_oaths": "The Oaths of the First Champions, Battleborn Era",
-
-  "lore.jolcraft.unspoken_tunnels": "The Unspoken Tunnels: A Guard Captain’s Memoir, Year 982",
-  "lore.jolcraft.ancient.rat_warnings": "Old Rat Infestation Warnings, Year 22",
-
-  "lore.jolcraft.hall_lanterns": "Inventory of the Hall of Lanterns, Year 1024",
-  "lore.jolcraft.ancient.bedroll_rules": "Bedroll Placement Rules for Shared Chambers, Founders’ Years",
-
-  "lore.jolcraft.ritual_beard_oil": "On the Use of Beard Oil in Ritual Contexts, Volume X",
-  "lore.jolcraft.ancient.root_preserves": "Recipes for Preserving Roots and Tubers, First Preservers",
-
-  "lore.jolcraft.roof_collapse_chronology": "Chronology of Roof Collapses in Irondeep Sector, Volume IX",
-  "lore.jolcraft.ancient.lost_tools": "The Lost Tools Ledger, Age of Loss",
-
-  "lore.jolcraft.echo_cartography": "Echo-Chamber Cartography: The First Attempts, Year 1251",
-  "lore.jolcraft.ancient.stoneguard_seating": "Seating Charts for Stoneguard Banquets, Early Stoneguard",
-
-  "lore.jolcraft.gemlines_bearers": "The Fifteen Gemlines and Their Bearers, Volume I",
-  "lore.jolcraft.ancient.animal_tokens": "Tokens Used in Early Kinship Rituals, Rituals Volume I",
-
-  "lore.jolcraft.stoneguard_protocols": "Stoneguard Protocols for Deep Siege Defense, Year 1066",
-  "lore.jolcraft.ancient.stoneguard_pact": "The Stoneguard Pact, Pact Year",
-
-  "lore.jolcraft.arcanist_binding_rituals": "Rituals of Binding: Arcanist Practices, Volume XIII",
-  "lore.jolcraft.ancient.rune_lock_diagrams": "Diagrams of Rune-Locked Chests, Keymasters’ Era",
-
-  "lore.jolcraft.mithril_forging": "On the Forging of Mithril Alloy, Year 987",
-  "lore.jolcraft.ancient.forge_of_mithril": "The Forging of Mithril, Old Metallurgists",
-
-  "lore.jolcraft.contract_seals": "Contract Seals and Binding Ink Formulas, Volume XI",
-  "lore.jolcraft.ancient.contract_signatures": "Ledger of Old Contract Signatures, Scribe’s Year",
-
-  "lore.jolcraft.emberglass_fires": "Mysteries of the Emberglass Furnace-Fires, Year 1187",
-  "lore.jolcraft.ancient.emberglass_forge_logs": "Emberglass Forge Logs, First Era",
-
-  "lore.jolcraft.deepmarrow_sigils": "Ancestral Sigils of the Deepmarrow Keepers, Volume XII",
-  "lore.jolcraft.ancient.memory_shard_discovery": "Discovery of the Memory Shards, Year 7",
-
-  "lore.jolcraft.chaos_dwarves_warning": "Chaos Dwarves: A Warning to the Forgeborn, Year 1293",
-  "lore.jolcraft.ancient.exile_records": "Records of Exiles and Outcasts, Outcast Scrolls",
-
-  "lore.jolcraft.woecrystal_runes": "Runes of Woecrystal and Their Applications, Volume XVI",
-  "lore.jolcraft.ancient.spirit_encounter": "An Early Encounter with a Dwarven Spirit, Lost Era",
-
-  "lore.jolcraft.lost_caravans": "Ledger of Lost Caravans, Volume VI",
-  "lore.jolcraft.ancient.sealed_vaults": "Account of the Sealed Vaults of Hraga, Vault Year",
-
-  "lore.jolcraft.breweries_stews": "Warden-Blessed Breweries and Sacred Stews, Volume XIV",
-  "lore.jolcraft.ancient.root_storage": "On the Storage of Root Vegetables in Deep Cellars, First Storage",
-
-  "lore.jolcraft.statue_spirit_binding": "Spirit-Binding Rites for Guardian Statues, Year 1010",
-  "lore.jolcraft.ancient.dawn_hall_relics": "Relics of the Dawn Hall, Dawn Era"
 
 }
