bulb feature, biometags, more salvage

--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -249,11 +249,17 @@
   "item.jolcraft.broken_belt": "Broken Belt",
   "item.jolcraft.broken_coins": "Broken Coins",
   "item.jolcraft.deepslate_mug": "Deepslate Mug",
+  "item.jolcraft.broken_tablet": "Broken Tablet",
+  "item.jolcraft.broken_deepslate_plates": "Broken Deepslate Plate",
+  "item.jolcraft.broken_deepslate_gear": "Broken Deepslate Gear",
+  "item.jolcraft.broken_deepslate_pickaxe_head": "Broken Deepslate Pickaxe Head",
   "item.jolcraft.expired_potion": "Expired Potion",
   "item.jolcraft.ingot_mould": "Ingot Mould",
   "item.jolcraft.mithril_salvage": "Mithril Salvage",
   "item.jolcraft.old_fabric": "Old Fabric",
   "item.jolcraft.rusty_tongs": "Rusty Forge Tongs",
+  "item.jolcraft.broken_mithril_sword": "Broken Mithril Sword",
+  "item.jolcraft.broken_mithril_plate": "Broken Mithril Plate",
 
   "tooltip.jolcraft.language.locked": "You do not understand each other.",
   "tooltip.jolcraft.dwarf.busy": "This dwarf is currently busy.",
