--- a/src/main/resources/assets/jolcraft/lang/en_us.json
+++ b/src/main/resources/assets/jolcraft/lang/en_us.json
@@ -310,6 +310,7 @@
 
   "tooltip.jolcraft.shift": "Hold %s for more info",
 
+  "tooltip.jolcraft.dev_key": "Used for testing/creative mode.",
   "tooltip.jolcraft.quill_empty": "Can be filled with ink sacs or by right-clicking a squid.",
   "tooltip.jolcraft.quill": "Used for writing on paper. Can be filled with ink sacs or by right-clicking a squid.",
   "tooltip.jolcraft.quill_full": "Used for writing on paper.",
@@ -322,22 +323,24 @@
   "tooltip.jolcraft.trim_material": "Can be used to trim armor.",
 
   "tooltip.jolcraft.coin_pouch": "Stores up to 999 coins. Right-click when held to deposit all coins in inventory. Left-click with coins in inventory to deposit up to a stack. Right-click in inventory to withdraw up to a stack.",
-  "tooltip.jolcraft.hearth": "Can be activated if placed within 10 blocks of a claimed bed. Need to sleep in a bed to activate another hearth. Multiple players can be bound to a hearth. Provides Homestead effect to bound players within range.",
+  "tooltip.jolcraft.hearth": "Can be activated if placed within 10 blocks of a claimed bed. Need to sleep in a bed to activate a hearth again. Multiple players can be bound to a hearth. Provides Homestead effect to bound players within range.",
   "tooltip.jolcraft.verdant": "JolCraft crops ignores growing conditions and also grow faster on this. Other crops can be planted but no extra effects.",
   "tooltip.jolcraft.vanilla_crop": "Grows like vanilla crops.",
   "tooltip.jolcraft.hops_seed": "Needs two blocks height and a light level of 8 or less to grow.",
   "tooltip.jolcraft.deepslate_bulbs": "Needs a light level of 8 or less to grow. Can only be planted on Deepslate, Tuff or Verdant Soil.",
+  "tooltip.jolcraft.mushroom": "Planted and spreads like vanilla mushrooms. No giant variant.",
+  "tooltip.jolcraft.festerling": "Can be cultivated with rotten flesh. Planted on top of log ends. Spreads like vanilla mushrooms",
   "tooltip.jolcraft.malt": "Can be used on a water cauldron as a first step in brewing.",
   "tooltip.jolcraft.hops": "Can be used on a cauldron with malt to add effects to a brew.",
   "tooltip.jolcraft.yeast": "Can be used on a fermenting cauldron with malt/hops to start the brewing process. Created by using sugar on a water cauldron and extracted using glass bottles.",
   "tooltip.jolcraft.glass_mug": "Can be used to extract a finished dwarven brew from a cauldron.",
 
   "tooltip.jolcraft.spanner": "Can be used to produce scrap from salvage. Hold the spanner in one hand and salvage in the other, then right click!",
-  "tooltip.jolcraft.geode": "Can be broken in a lapidary bench with an artisan hammer.",
-  "tooltip.jolcraft.uncut_gem": "Can be broken into dust or cut in a lapidary bench.",
-  "tooltip.jolcraft.artisan_hammer": "Can be used to break geodes and gems in a lapidary bench.",
-  "tooltip.jolcraft.cut_gem": "Can be used to trim armor for bonus stats.",
-  "tooltip.jolcraft.chisel": "Can be used to cut gems in a lapidary bench.",
+  "tooltip.jolcraft.geode": "Can be broken into dust using an artisan hammer at a lapidary bench.",
+  "tooltip.jolcraft.uncut_gem": "Can be broken into dust using an artisan hammer or cut using a chisel at a lapidary bench.",
+  "tooltip.jolcraft.artisan_hammer": "Can be used to break geodes and gems at a lapidary bench.",
+  "tooltip.jolcraft.cut_gem": "Can be used to trim armor for bonus stats. Cosmetic trims do not override given stats. Only new stat trims.",
+  "tooltip.jolcraft.chisel": "Can be used to cut gems at a lapidary bench.",
   "tooltip.jolcraft.chisel.cut_locked": "You have not learned how to cut gems!",
 
   "tooltip.jolcraft.need_lang": "You need to understand dwarvish to use this.",
